# OpenLuminary

./: CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  app.py  dashboard.py  dashboard_integrations.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  getting_started.md  installation.md
src/api/: main.py
src/integrations/: alpha_vantage.py  base.py  fred.py  manager.py
src/models/: financial_dataset_generator.py  fine_tuning.py  qwen_interface.py
src/risk_assessment/: advanced_risk.py  basic_risk.py
tests/: test_data_connector.py  test_portfolio_optimizer.py  test_risk_assessment.py
