[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openluminary"
version = "0.1.0"
description = "Open-source AI-powered financial analysis system"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "streamlit>=1.24.0",
    "yfinance>=0.2.25",
    "plotly>=5.14.0",
]

[project.urls]
"Homepage" = "https://github.com/ai-joe-git/OpenLuminary"
"Bug Tracker" = "https://github.com/ai-joe-git/OpenLuminary/issues"
